# ML-project-Diabetis-predictor

./: .gitignore  README.md  TeamXX_Assignment2_dashboard.py  pyproject.toml
outputs/: aggregated_patients.csv  aggregated_patients_summary.csv  diabetes_labels.csv  diabetes_labels_debug.csv  test_ids.csv  train_ids.csv
outputs/figures/: dt_feature_importances.csv  mlp_permutation_importances.csv
outputs/models/: dt_retrained.joblib  mlp_finetuned.joblib  preprocessor.joblib  results_stage2.joblib
outputs/reports/: feature_importance_summary.txt  models_metrics.csv  models_summary.json
src/: 01_split.py  02_label.py  03_choose_cutoff.py  04_aggregate.py  05_split_and_label.py  06_stats.py  07_train.py  08_continual.py  09_explain_eda.py  10_dump_joblib.py
