[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "streamlit>=1.24",
    "rapidfuzz>=2.15",
    "joblib>=1.3",
    "altair>=5.0",
    "matplotlib>=3.8",
    "seaborn>=0.12",
    "python-dateutil",
]

[project.scripts]
run-dashboard = "streamlit.cli:main"
