[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "streamlit>=1.24",
    "rapidfuzz>=2.15",
    "joblib>=1.3",
    "altair>=5.0",
    "matplotlib>=3.8",
    "seaborn>=0.12",
    "python-dateutil",
]

[project.scripts]
run-dashboard = "streamlit.cli:main"

[tool.commands]
# Recommended commands to run the pipeline (canonical python commands)
pipeline = [
  "python3 src/04_aggregate.py",
  "python3 src/05_split_and_label.py",
  "python3 src/07_train.py",
  "python3 src/08_continual.py",
  "python3 src/09_explain_eda.py",
  "python3 src/10_dump_joblib.py",
]
start_dashboard = [
  "streamlit run TeamXX_Assignment2_dashboard.py",
]

# Alternative using uv (if you prefer the uv helper wrapper)
uv_pipeline = [
  "uv run python3 src/04_aggregate.py",
  "uv run python3 src/05_split_and_label.py",
  "uv run python3 src/07_train.py",
  "uv run python3 src/08_continual.py",
  "uv run python3 src/09_explain_eda.py",
  "uv run python3 src/10_dump_joblib.py",
]
uv_start_dashboard = [
  "uv run streamlit run TeamXX_Assignment2_dashboard.py",
]
